fix: add margin to .footer-right element to fix spacing issue

--- a/Project-1/css/style.css
+++ b/Project-1/css/style.css
@@ -686,6 +686,7 @@ footer a:visited {
 }
 
 .footer-right {
+  margin-top: 56px;
   text-align: center;
 }
 
